# hello-dl-python

./: .gitignore  ACTIVATION_GUIDE.txt  README.md  SETUP_COMPLETE.md  download_mnist.py  pyproject.toml  requirements.txt  setup.py  setup_environment.py  test_exit_behavior.py
examples/: basic_operations_guide.py  cnn_comprehensive_guide.py  cnn_implementation_mapping.py  convo_alphabet_cnn.py  convo_tensor_blog_cpp_clone.py  digit_classifier_complete_guide.py  logsoftmax_crossentropy_guide.py  matrix_transformation_guide.py  neural_network.py  perceptron_37_learn.py  tensor_relu.py  tensor_relu_matrix_analysis.py  tensor_relu_parallel.py  three_or_seven.py  weight_matrix_shape_guide.py
explanations/: README.md  translation_invariance_demo.py  translation_invariance_quick_test.py
explanations/parallelism/: CNN_PARALLELISM_DEEP_GUIDE.md  CNN_PARALLELISM_SUMMARY.md  COMPLETE_PARALLELISM_GUIDE.md  PARALLELISM_COMPLETE_GUIDE.md  PARALLELISM_DEEP_DIVE.md  PARALLELISM_RESOURCES_INDEX.md  PARALLEL_TENSOR_RELU_SUMMARY.md  README_COMPLETE_RESOURCE.md  VISUAL_PARALLELISM_EXAMPLES.md  cnn_parallelism_complete_demo.py  data_flow_visualization_demo.py  matrix_arithmetic_details.py  matrix_splitting_visualization.py  memory_layout_visualization.py  parallelism_concepts_demo.py  parallelism_digit_classifier_demo.py  print_layer_distribution.py  readme.md  (+2 more)
tests/: test_decode_idx_magic_number.py  test_exit_simple.py  test_imports.py  test_mnist_utils.py  test_mnist_utils_documentation_examples.py  test_tensor_lib.py  test_tensor_lib_documentation_examples.py
(+3 files in other folders)
